<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">图书管理</string>
    <string name="action_settings">设置</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="about">关于</string>
    <string name="share">共享</string>
    <string name="search">搜索</string>
    <string name="test">测试</string>
    <string name="login">登录</string>
    <string name="local_bookss">本地图书</string>
    <string name="internet_books">网络图书</string>
    <string name="result_succeeded">扫描成功</string>
    <string name="result_failed">扫描失败</string>
    <string name="result_failed_why">扫描失败原因:</string>
    <string name="result_failed_parse">解析出錯</string>
    <string name="ok_button">是</string>
    <string name="no_button">否</string>
    <string name="scan_books">扫描书籍</string>
    <string name="fetch_books">获取图书</string>
    <string name="isbn_scanned_result">"ISBN "</string>
    <string name="unknown">未知</string>
    <string name="search_books_info">查询书目信息</string>
    <string name="book_author">图书作者: </string>
    <string name="book_summary">图书概要: </string>
    <string name="book_title">图书名称: </string>
    <string name="isbn">ISBN:</string>
    <string name="unconnected_network">网络未连接啊，亲爱的</string>
    <string name="book_img">book image</string>
    <string name="date">收录日期:</string>
    <string name="notice_usr_search">搜一搜</string>
    <string name="search_name">自定义搜索</string>
    <string name="locating">正在定位中...</string>
    <string name="bookshop">书店</string>
    <!-- xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" -->
    <string name="bookshop_num">"一共搜索到<xliff:g id="num">%d</xliff:g>家书店."</string>
    <string name="app_picker_name">应用</string>
    <string name="bookmark_picker_name">书签</string>
    <string name="button_add_calendar">添加事件至日历</string>
    <string name="button_add_contact">添加联系人</string>
    <string name="button_back">返回</string>
    <string name="button_book_search">打开图书搜索</string>
    <string name="button_cancel">取消</string>
    <string name="button_clipboard_empty">清空剪切板</string>
    <string name="button_custom_product_search">自定义搜索</string>
    <string name="button_dial">拨号</string>
    <string name="button_done">完成</string>
    <string name="button_email">发送email</string>
    <string name="button_get_directions">获取地址</string>
    <string name="button_google_shopper">谷歌购物</string>
    <string name="button_mms">发送彩信</string>
    <string name="button_ok">确定</string>
    <string name="button_open_browser">打开浏览器</string>
    <string name="button_product_search">打开产品搜索</string>
    <string name="button_search_book_contents">搜索图书内容</string>
    <string name="button_share_app">共享应用</string>
    <string name="button_share_bookmark">分享书签</string>
    <string name="button_share_by_email">通过email分享</string>
    <string name="button_share_by_sms">通过短信分享</string>
    <string name="button_share_clipboard">分享剪切板</string>
    <string name="button_share_contact">分享联系人</string>
    <string name="button_show_map">显示地图</string>
    <string name="button_sms">发送短信</string>
    <string name="button_web_search">网页搜索</string>
    <string name="button_wifi">连接到网络</string>
    <string name="contents_contact">联系人信息</string>
    <string name="contents_email">Email地址</string>
    <string name="contents_location">地理坐标</string>
    <string name="contents_phone">电话号码</string>
    <string name="contents_sms">短信地址</string>
    <string name="contents_text">纯文本</string>
    <string name="history_clear_one_history_text">删除</string>
    <string name="history_clear_text">删除历史</string>
    <string name="history_email_title">条码扫描器历史</string>
    <string name="history_empty">空的</string>
    <string name="history_empty_detail">没有条码扫描已记录</string>
    <string name="history_send">发送历史</string>
    <string name="history_title">历史</string>
    <string name="menu_about">关于</string>
    <string name="menu_encode_mecard">使用MECARD</string>
    <string name="menu_encode_vcard">使用vCard</string>
    <string name="menu_help">帮助</string>
    <string name="menu_history">历史</string>
    <string name="menu_settings">设置</string>
    <string name="settings">设置</string>
    <string name="menu_share">分享</string>
    <string name="msg_about">基于ZXing开源条码引擎</string>
    <string name="msg_bulk_mode_scanned">批量扫描：找到条码，已保存</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">请将条码置于取景框内扫描。  </string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_encode_contents_failed">无法根据已有数据生成条码。   </string>
    <string name="msg_google_books">谷歌图书</string>
    <string name="msg_google_product">谷歌购物</string>
    <string name="msg_google_shopper_missing">谷歌购物未安装</string>
    <string name="msg_install_google_shopper">谷歌购物是一款将条码扫描和商品比价相结合的应用，谷歌购物不使用浏览器，您想尝试吗？</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="msg_redirect">重定向</string>
    <string name="msg_sbc_book_not_searchable">抱歉，无法找到此图书。</string>
    <string name="msg_sbc_failed">抱歉，搜索时遇到错误。</string>
    <string name="msg_sbc_no_page_returned">无页面返回</string>
    <string name="msg_sbc_page">页面</string>
    <string name="msg_sbc_searching_book">搜索图书…</string>
    <string name="msg_sbc_snippet_unavailable">摘录不可用</string>
    <string name="msg_sbc_unknown_page">未知页面</string>
    <string name="msg_share_explanation">您可以通过在自己的手机上显示条码，并使用其它手机扫描此条码的方式进行分享</string>
    <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
    <string name="msg_share_text">或键入一些文字</string>
    <string name="msg_sure">你肯定吗？</string>
    <string name="msg_unmount_usb">抱歉，SD卡不可访问。</string>
    <string name="preferences_actions_title">找到条码时</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条形码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
    <string name="preferences_custom_product_search_summary" formatted="false">替换：％s=内容，％f=格式，％t=类型</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_title">扫描 一维条码</string>
    <string name="preferences_decode_Data_Matrix_title">扫描 DM码</string>
    <string name="preferences_decode_QR_title">扫描 QR码</string>
    <string name="preferences_front_light_summary">前灯可用时，打开前灯</string>
    <string name="preferences_front_light_title">前灯</string>
    <string name="preferences_general_title">一般设置</string>
    <string name="preferences_name">设置</string>
    <string name="preferences_play_beep_title">提示音</string>
    <string name="preferences_remember_duplicates_summary">在历史记录中保存重复记录</string>
    <string name="preferences_remember_duplicates_title">记住重复</string>
    <string name="preferences_result_title">结果设置</string>
    <string name="preferences_reverse_image_summary">设备上启用了前置摄像头只</string>
    <string name="preferences_reverse_image_title">反转摄像机的图像</string>
    <string name="preferences_scanning_title">条码类型选择</string>
    <string name="preferences_search_country">搜索国家</string>
    <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="preferences_supplemental_title">检索更多信息</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="result_address_book">找到联系人信息</string>
    <string name="result_calendar">找到日历事件</string>
    <string name="result_email_address">找到email地址</string>
    <string name="result_geo">找到地理坐标</string>
    <string name="result_isbn">找到图书</string>
    <string name="result_product">找到产品</string>
    <string name="result_sms">找到短信地址</string>
    <string name="result_tel">找到电话号码</string>
    <string name="result_text">找到纯文本</string>
    <string name="result_uri">找到URL</string>
    <string name="result_wifi">发现网络配置</string>
    <string name="sbc_name">Google图书搜索</string>
    <string name="share_name">通过条码分享</string>
    <string name="title_about">条码扫描器</string>
    <string name="wifi_changing_network">请求连接到网络\u2026</string>
    <string name="wifi_ssid_label">网络SSID</string>
    <string name="wifi_type_label">类型</string>
    <string name="zxing_url">http://code.google.com/p/zxing</string>
    <string name="author">"作者"</string>
    <string name="author_contact">"Email:zhang814992347@126.com"</string>
    <string name="composer_button_photo">"打开扫描图书"</string>
    <string name="composer_button_thought">"阅读进度一览"></string>
    <string name="composer_button_people">"我的好友"</string>
    <string name="composer_button_place">"附件搜索书店"</string>
    <string name="addReadingTitle">新增阅读条目</string>
    <string name="please_input_title">请输入书名</string>
    <string name="please_input_author">请输入作者</string>
    <string name="please_input_pages_read">请输入阅读页数</string>
    <string name="input_error">输入有误~</string>
    <string name="warning">警告</string>
    <string name="duplicate_record">已有读书记录,确认要更新?</string>
    <string name="search_fail">搜索失败</string>
    <string name="tab_personal">我</string>
    <string name="tab_group">圈子</string>
    <string name="tab_online">在线资源</string>

    <string-array name="personal_items">
        <item>阅读提醒</item>
        <item>阅读历史</item>
        <item>喜欢的图书</item>
        <item>收录书籍管理</item>
        <item>读书笔记</item>
        <item>我的在线书架</item>
        <item>社区</item>
        <item>上次阅读</item>
        <item>账户管理</item>
        <item>数据备份及同步</item>
        <item>与好友同步数据</item>
        <item>网上买书,货比三家</item>
        <item>借阅归还</item>
    </string-array>

    <string name="add_alarm">添加闹钟</string>
    <string name="online_resources_notice">须知:以下所有资源均来自互联网,不可用于商用!</string>
    <string name="repeat">重复</string>
    <string name="isOn">启用</string>
    <string name="on">打开</string>
    <string name="off">关闭</string>
    <string name="vibrate">振动</string>
    <string name="comment">备注</string>
    <string name="mute">静音</string>

    <string-array name="days">
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
        <item>周日</item>
    </string-array>
    <string-array name="day_value">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>8</item>
        <item>16</item>
        <item>32</item>
        <item>64</item>
    </string-array>

    <string name="null_notice">囧~你连一个记录都木有~</string>
    <string name="peers">可见的小伙伴</string>
    <string name="local">本地设备</string>
    <string name="p2p_use_notice">使用须知:只有同时当正在wifi direct p2p搜索的小伙伴才会显示到本地列表中呃~点击小伙伴列表邀请他们加入这个组吧~</string>
    <string name="connect">连接</string>
    <string name="disconnect">断开</string>
    <string name="setting_time">设置时间</string>
    <string name="setting_date">设置日期</string>
    <string name="reading_alarm_notice_content">阅读提醒: <xliff:g id="num">%s</xliff:g>,时间:<xliff:g id="num">%s</xliff:g></string>
    <string name="reading_alarm_notice_ticker">"你有<xliff:g id="num">%d</xliff:g>个阅读提醒哦,喵~"</string>
    <string name="reading_alarm_notice_title">个人阅读助手</string>
    <string name="sure_delete">确认删除吗?</string>
    <string name="not_allowed_open">不允许设置过时的闹钟哦~</string>
    <string name="not_allowed_null">写点备忘提醒吧~</string>
    <string name="delete">删除</string>
    <string name="select">选择</string>
    <string name="done">完成</string>
    <string name="all">所有</string>
    <string name="add_note">新建笔记</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>

</resources>