<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/addReadingTitle" />

    <CalendarView
        android:id="@+id/add_calendar"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp" />

    <EditText
        android:id="@+id/add_title_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/please_input_title"
        android:singleLine="true" />

    <EditText
        android:id="@+id/add_author_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/please_input_author"
        android:singleLine="true" />

    <EditText
        android:id="@+id/add_read_page"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/please_input_pages_read"
        android:numeric="integer"
        android:singleLine="true" />

</LinearLayout>